# task_manager_api

./: .env  .gitignore  README.md  alembic.ini  pyproject.toml
app/: main.py  schemas.py  utils.py
app/database/: db.py  db_session.py
app/migrations/: env.py
app/migrations/versions/: 7635882b7ff9_initial_base.py  96b0cf97de25_initial_migrations.py
app/models/: tasks.py  users.py
app/routers/: __init__.py  auth.py  tasks.py  users.py
tests/: conftest.py  test_auth_user.py  test_main.py  test_user.py
