[tool.pytest.ini_options]
pythonpath = ["app","."]
asyncio_mode = "auto"

[tool.poetry]
name = "fastapitecting"
version = "0.1.0"
description = ""
authors = ["Slava Kovalchuk <Slava24122003@MAIL.RU>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pytest = "^8.3.3"
fastapi = {extras = ["all"], version = "^0.115.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"